1.0.1 [2025/09/25]
 - updated main menu (goffy)
 - added Modulemenu class (goffy)
 - updated README (goffy)
 - added dashboard items (goffy)
 - updated mymenu template (liomj)
 - updated block positions (goffy)

1.0.0
 - Original release (liomj)