@@ -76,7 +76,9 @@ function sbadmin5_main_menu() {
         }
     }
 
-    $GLOBALS['xoopsTpl']->assign('mainMenuSbadmin', $block);
+    if (isset($GLOBALS['xoopsTpl']) && is_object($GLOBALS['xoopsTpl'])) {
+        $GLOBALS['xoopsTpl']->assign('mainMenuSbadmin', $block);
+    }
 
 }
 
@@ -85,33 +87,34 @@ function sbadmin5_dashboard() {
 
     require_once XOOPS_ROOT_PATH . '/modules/system/blocks/system_blocks.php';
 
-    /*block online*/
-    $block = b_system_online_show();
-    if ($block) {
-        $dashboard_online = [];
-        $dashboard_online['totalOnline'] = $block['online_total'];
-        $GLOBALS['xoopsTpl']->assign('dashboard_online', $dashboard_online);
-    }
+    if (isset($GLOBALS['xoopsTpl']) && is_object($GLOBALS['xoopsTpl'])) {
+        /*block online*/
+        $block = b_system_online_show();
+        if ($block) {
+            $dashboard_online = [];
+            $dashboard_online['totalOnline'] = $block['online_total'];
+            $GLOBALS['xoopsTpl']->assign('dashboard_online', $dashboard_online);
+        }
 
-    /*block new members*/
-    $options = [];
-    $options[0] = 10;
-    $options[1] = 1;
-    $block = b_system_newmembers_show($options);
-    if ($block) {
-        $dashboard_newuser = [];
-        $dashboard_newuser['users'] = $block['users'];
-        $GLOBALS['xoopsTpl']->assign('dashboard_newuser', $dashboard_newuser);
-    }
+        /*block new members*/
+        $options = [];
+        $options[0] = 10;
+        $options[1] = 1;
+        $block = b_system_newmembers_show($options);
+        if ($block) {
+            $dashboard_newuser = [];
+            $dashboard_newuser['users'] = $block['users'];
+            $GLOBALS['xoopsTpl']->assign('dashboard_newuser', $dashboard_newuser);
+        }
 
-    /*block comments*/
-    $options = [];
-    $options[0] = 10;
-    $block = b_system_comments_show($options);
-    if ($block) {
-        $dashboard_comments = [];
-        $dashboard_comments['comments'] = $block['comments'];
-        $GLOBALS['xoopsTpl']->assign('dashboard_comments', $dashboard_comments);
+        /*block comments*/
+        $options = [];
+        $options[0] = 10;
+        $block = b_system_comments_show($options);
+        if ($block) {
+            $dashboard_comments = [];
+            $dashboard_comments['comments'] = $block['comments'];
+            $GLOBALS['xoopsTpl']->assign('dashboard_comments', $dashboard_comments);
+        }
     }
-
 }
